--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        position: absolute;
+        bottom: 10px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -45,12 +47,38 @@
         </div>
       </section>
       <section class="summary-card">
-        <div clss="" inner-text-sum>
-          Summary
-          <div class="reaction">Reaction 80 / 100</div>
-          <div class="memory">Memory 92 / 100</div>
-          <div class="verbal">Verbal 61 / 100</div>
-          <div class="Visual">Visual 72 / 100 Continue</div>
+        <div class="inner-text-sum">
+          <h2>Summary</h2>
+          <div class="pills">
+            <div class="reaction pill">
+              <img src="assets/images/icon-reaction.svg" /> Reaction
+
+              <span class="numbers"
+                >80 <span class="numbers-in">/ 100</span></span
+              >
+            </div>
+            <div class="memory pill">
+              <img src="assets/images/icon-memory.svg" />
+              Memory
+              <span class="numbers"
+                >92 <span class="numbers-in">/ 100</span></span
+              >
+            </div>
+            <div class="verbal pill">
+              <img src="assets/images/icon-verbal.svg" />
+              Verbal
+              <span class="numbers"
+                >61 <span class="numbers-in">/ 100</span></span
+              >
+            </div>
+            <div class="visual pill">
+              <img src="assets/images/icon-visual.svg" />
+              Visual
+              <span class="numbers"
+                >72 <span class="numbers-in">/ 100</span></span
+              >
+            </div>
+          </div>
           <a href="#">Continue</a>
         </div>
       </section>
@@ -60,7 +88,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="https://madroosterlab.com" target="_blank">Jon Avila</a>.
     </div>
   </body>
 </html>
